<resources>
    <string name="app_name">first</string>
    <string name="registration_no">Registration No</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="image">image</string>
    <string name="connect">CONNECT</string>
    <string name="button">Button</string>
    <string name="remember_me2">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login1">Login</string>
    <string name="or_btn">TODO</string>
    <string name="connect1">connect</string>
    <string name="connect2">Connect</string>
    <string name="new_user_login">New User ? Login</string>
    <string name="password4">Password</string>
    <string name="goo">goo</string>
    <string name="face">face</string>
    <string name="iv_logo">iv_logo</string>
    <string name="email3">Email</string>
    <string name="confirm">CONFIRM</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="reset">RESET</string>
    <string name="name">NAME</string>
    <string name="registration_no1">REGISTRATION NO</string>
    <string name="email1">EMAIL</string>
    <string name="password1">PASSWORD</string>
    <string name="confirm_password1">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="welcome">WELCOME</string>
    <string name="string_welcome">WELCOME</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name1">Name</string>
    <string name="registration_no2">Registration No</string>
    <string name="email">Email</string>
    <string name="password7">Password</string>
    <string name="logout">LOGOUT</string>
    <string name="login_preference"> com.splash.user.first_login_preference</string>
    <string name="login_status_preference"> com.splash.user.first_login_status_preference</string>
    <string name="facebook_app_id">1145591678948362</string>
    <string name="fb_login_protocol_scheme">fb1145591678948362</string>
    <string name="textview">TextView</string>
    <string name="registration_no7">Registration No.</string>
    <string name="check">CHECK</string>
    <string name="todo">TODO</string>
    <string name="post">POST</string>
    <string name="e_notice">e-NOTICE</string>
    <string name="website"><a href="http://www.aecwb.edu.in/index.php">
        WEBSITE</a></string>
    <string name="syllabus">SYLLABUS</string>
    <string name="campus_drive">CAMPUS DRIVE</string>
    <string name="cse">CSE</string>
    <string name="it">IT</string>
    <string name="ece">ECE</string>
    <string name="ee">EE</string>
    <string name="ce">CE</string>
    <string name="me">ME</string>
    <string name="aeie">AEIE</string>
    <string name="id">ID</string>
    <string name="verify">VERIFY</string>
    <string name="date">Date</string>
    <string name="date1">Date</string>
    <string name="notice">Notice</string>
    <string name="post1">POST</string>
    <string name="view_notice">VIEW NOTICE</string>
    <string name="tcs">TCS</string>
    <string name="cts">CTS</string>
    <string name="cgi">CGI</string>
    <string name="mindtree">MINDTREE</string>
    <string name="bosch">BOSCH</string>
    <string name="sriram_finance">SRIRAM FINANCE</string>
    <string name="persistent_system">PERSISTENT SYSTEM</string>
    <string name="take_test">TAKE TEST</string>
    <string name="mock_test">MOCK TEST</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Are you sure you want to exit?</string>


</resources>
