<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.splash.user.first.MainActivity">

    <VideoView
        android:id="@+id/bgvideoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/v_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/h_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <EditText
        android:id="@+id/et_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_bg"
        android:drawableStart="@drawable/id1"
        android:ems="10"
        android:hint="@string/registration_no"
        android:inputType="text"
        android:padding="2sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline1"
        android:drawableLeft="@drawable/id1" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_bg"
        android:drawableStart="@drawable/pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="2sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et_reg"
        android:drawableLeft="@drawable/pass" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@android:color/darker_gray"
        android:text="@string/remember_me"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintLeft_toRightOf="@+id/v_guideline1"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forget_password"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:text="@string/login"
        app:layout_constraintLeft_toRightOf="@+id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/cb_remember" />

    <ImageView
        android:id="@+id/iv_img_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        app:layout_constraintLeft_toRightOf="@+id/v_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:srcCompat="@drawable/or" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="192dp"
        android:background="@drawable/tv_bg"

        android:padding="1sp"
        android:text="@string/connect"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/v_guideline1"
        app:layout_constraintTop_toBottomOf="@+id/iv_img_or"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="192dp" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="200dp"
        android:background="@drawable/tv_bg"

        android:padding="1sp"
        android:text="@string/button"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_img_or"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="200dp" />


</android.support.constraint.ConstraintLayout>
