<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg_animation"
    android:clickable="true"
    android:focusable="true"
    tools:context=".campusDrive">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="121dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/aec" />

    <Button
        android:id="@+id/tcs"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_below="@+id/profilePic"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/tcs"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/cts"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/cts"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <Button
        android:id="@+id/mindtree"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/mindtree"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <Button
        android:id="@+id/cgi"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/cgi"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <Button
        android:id="@+id/bosch"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/bosch"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/sriram"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/sriram_finance"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/persistent"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_bootstrap_rounded_default"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/persistent_system"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <Button
        android:id="@+id/test"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_material_rounded_yellow"
        android:clickable="false"
        android:focusable="auto"
        android:lineSpacingExtra="8sp"
        android:text="@string/take_test"
        android:textAllCaps="false"
        android:textColor="@color/bootstrap_danger_pressed_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />


</android.support.constraint.ConstraintLayout>